<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="fragment.closeUpAnimal.CloseUpPictureFragment">

    <TextView
        android:id="@+id/saveDatePictureTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:paddingTop="32dp"
        android:paddingBottom="32dp"
        android:text="@string/save_data_string"
        android:textColor="#757575" />

    <ImageView
        android:id="@+id/selectedAnimalPicture"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:contentDescription="@string/selected_animal_picture_string"
        tools:src="@tools:sample/avatars" />

    <Button
        android:id="@+id/deletePicture"
        style="@style/MainButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_string"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"/>

</LinearLayout>